# Telegram_To_Obsidain_with_LLM

./: .gitignore  README.md  pyproject.toml  setup_modules.ps1  test_youtube.py  vscode-extensions.txt
src/local_llm/: client.py
src/modify_llm/: __init__.py  processor.py
src/youtube_info/: __init__.py  client.py
tests/manual/: test_local_llm.py  test_modify_llm.py  test_youtube.py
